Fix suggestions horizontally overflowing window (#655)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/editor.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/editor.component.scss
@@ -3,7 +3,6 @@
 :host {
   display: flex;
   flex-direction: column;
-  flex: 1;
 }
 
 .toolbar {
@@ -36,9 +35,7 @@
 }
 
 .text-area {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
+  width: 50%;
 }
 
 .text-container {
